--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "express-handlebars": "^2.0.1",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "mysql": "^2.9.0",
+    "request": "^2.67.0"
+      
   },
   "devDependencies": {
     "gulp": "^3.9.0",
@@ -18,3 +23,5 @@
     "gulp-uglify": "^1.5.1"
   }
 }
+
+
